<resources>
    <string name="app_name">Gerenciador de Despesas</string>
    <string name="selecione_categoria">Excluir Categoria</string>
    <string name="button_excluir">Excluir</string>
    <string name="nome_categoria">Inserir Categoria</string>
    <string name="button_inserir_dados_pessoais">Inserir Dados Pessoais</string>
    <string name="button_registrar_financas">Registrar Finanças</string>
    <string name="button_consultar_financas">Consultar Finanças</string>
    <string name="button_analisar_financas">Analisar Finanças</string>
    <string name="buttom_salvar">Salvar</string>
    <string name="buttom_cancelar">Cancelar</string>
    <string name="radio_parcelas">Parcelado</string>
    <string name="buttom_inserir_categoria">Inserir Categoria</string>
    <string name="buttom_excluir_categoria">Excluir Categoria</string>
    <string name="buttom_voltar_categoria">Voltar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_excluir_categorias">Excluir Categorias</string>
    <string name="title_activity_main">Tela Inicial</string>
    <string name="title_activity_inserir_dados_pessoais">Inserir Dados Pessoais</string>
    <string name="insira_nome">Insira Seu Nome: </string>
    <string name="insira_sua_renda">Insira Sua Renda Mensal: </string>
    <string name="title_activity_registrar_financas">Registrar Financas</string>
    <string name="inserir_excluir_categoria">Inserir e Excluir Categoria</string>
    <string name="radio_receita">Receita</string>
    <string name="radio_despesa">Despesa</string>
    <string name="radio_evento_previsto">Evento Previsto</string>
    <string name="parcelas">Parcelas</string>
    <string-array name="pagamento">
        <item>Dinheiro</item>
        <item>Cartão de Credito</item>
        <item>Cartão de Debito</item>
        <item>Cheque</item>
    </string-array>
</resources>
