<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="escobar.gabriel.engsoftware.RegistrarFinancas"
    android:id="@+id/relativeLayout"
    android:visibility="visible">

    <EditText
        android:layout_marginTop="150px"
        android:layout_width="1000px"
        android:layout_height="150px"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="Nome"
        android:gravity="center" />

    <EditText
        android:layout_marginTop="300px"
        android:layout_width="1000px"
        android:layout_height="150px"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText5"
        android:gravity="center"
        android:hint="Valor"
        android:visibility="visible" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />

    <EditText
        android:layout_width="1000px"
        android:layout_height="150px"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true"
        android:hint="DD/MM/YYYY"
        android:gravity="center"
        android:visibility="visible" />

    <Spinner
        android:layout_width="1000px"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_below="@+id/editText6" />

    <Button
        android:layout_width="700px"
        android:layout_height="100px"
        android:textSize="40px"
        android:text="@string/inserir_excluir_categoria"
        android:backgroundTint="#56a8da"
        android:textColor="#ffffff"
        android:id="@+id/button14"
        android:layout_below="@+id/spinner3"
        android:layout_centerHorizontal="true"
        android:onClick="onClickInserirExcluir" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/buttom_cancelar"
        android:layout_width="500px"
        android:layout_height="150px"
        android:backgroundTint="#56a8da"
        android:textColor="#ffffff"
        android:id="@+id/button15"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickButtonCancel" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/buttom_salvar"
        android:layout_width="500px"
        android:layout_height="150px"
        android:backgroundTint="#56a8da"
        android:id="@+id/button16"
        android:clickable="true"
        android:onClick="onClickSalvarDados"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioButton
        android:layout_width="500px"
        android:layout_height="150px"
        android:text="@string/radio_receita"
        android:id="@+id/radioButton"/>

    <RadioButton
        android:layout_marginLeft="500px"
        android:layout_width="500px"
        android:layout_height="150px"
        android:text="@string/radio_despesa"
        android:id="@+id/radioButton2" />

    <RadioButton
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:textSize="40px"
        android:text="@string/radio_evento_previsto"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/button14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="500px"
        android:textSize="40px"
        android:layout_height="wrap_content"
        android:text="@string/radio_parcelas"
        android:id="@+id/parcela"
        android:layout_below="@+id/radioButton3"
        android:layout_alignRight="@+id/radioButton3"
        android:layout_alignEnd="@+id/radioButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="500px"
        android:textSize="40px"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_below="@+id/radioButton3"
        android:layout_alignRight="@+id/button16"
        android:layout_alignEnd="@+id/button16"
        android:layout_toRightOf="@+id/radioButton3"
        android:layout_toEndOf="@+id/radioButton3"
        android:visibility="invisible" />

</RelativeLayout>
